bynkc/tests/fixtures/positive/114_mixed_explicit_and_auto/input.bynk
commons demo

fn classify(n: Int) -> Effect[Int] {
  if n == 0 {
    Effect.pure(0)
  } else {
    n
  }
}
