bynkc/tests/fixtures/negative/16_let_undeclared/input.bynk
commons test {
  fn f(n: Int) -> Int {
    let x = y
    x
  }
}
